@@ -1,3 +1,7 @@
+2012-06-20 : Version next
+ * Add --no-output-on-error (-u) option. By using this option output can be
+   disabled if there is no currently received code word.
+
 2012-04-19 : Version 8.1
  * Add support for Bulcrypt CAS.
 
